--- a/blog/frontend/package.json
+++ b/blog/frontend/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.4.2",
     "@reduxjs/toolkit": "^2.2.5",
     "framer-motion": "^11.2.12",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
