--- a/blog/frontend/package.json
+++ b/blog/frontend/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "autoprefixer": "^10.4.19",
     "framer-motion": "^11.2.12",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
