--- a/blog/backend/package.json
+++ b/blog/backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "DEBUG=csablog:* nodemon ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -23,7 +23,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.6.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "sequelize-cli": "^6.6.2"
   }
 }
