--- a/blog/frontend/package.json
+++ b/blog/frontend/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.4.2",
     "@reduxjs/toolkit": "^2.2.5",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
     "framer-motion": "^11.2.12",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -20,6 +21,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
