--- a/blog/frontend/package.json
+++ b/blog/frontend/package.json
@@ -9,12 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.4.2",
     "@reduxjs/toolkit": "^2.2.5",
-    "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "beercss": "^3.6.1",
     "framer-motion": "^11.2.12",
-    "next-themes": "^0.3.0",
+    "material-dynamic-colors": "^1.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
