--- a/blog/frontend/jsconfig.json
+++ b/blog/frontend/jsconfig.json
@@ -2,13 +2,12 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@src*": ["./src/*"],
-      "@services*": ["./src/services/*"],
-      "@components*": ["./src/components/*"],
-      "@pages*": ["./src/pages/*"],
-      "@redux*": ["./src/redux/*"],
-      "@assets*": ["./src/assets/*"],
-      "@hooks*": ["./src/hooks/*"]
+      "@services/*": ["./src/services/*"],
+      "@components/*": ["./src/components/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@redux/*": ["./src/redux/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@hooks/*": ["./src/hooks/*"]
     }
   }
 }
